Added test fix